--- a/app/src/main/res/layout/activity_tab_example2.xml
+++ b/app/src/main/res/layout/activity_tab_example2.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab"
